2009-07-28: Added better support for compiling with MSVC and ocamlbuild.

            Thanks to <ygrek@autistici.org> for this patch!

2009-05-23: Fixed example to be consistent with new API.

2009-05-16: Fixed mishandling of OCaml-runtime lock when callbacks
            raise exceptions, and correctly handle NULL-pointer
            results when getting column type declarations.

            Thanks to Bruno Daniel <bruno.daniel@gmx.net> for this
            patch!

            Changed API to expose optional results.

2009-03-09: Fixed potential build problem.

2009-03-01: Added support for user-defined aggregate functions.

            Thanks to Anil Madhavapeddy <anil@recoil.org> for the initial
            version of the patch!

2009-02-21: Added new function:

              * busy_timeout

            Thanks to Paolo Donadeo <p.donadeo@gmail.com> for the patch!

2009-01-05: Switched to generational global root registration of
            callbacks for better performance.

            Requires OCaml 3.11 or higher!!!

2008-12-02: Added function enable_load_extension if it is available.

            Thanks to Pietro Abate <Pietro.Abate@pps.jussieu.fr> for
            the patch!

2008-05-11: Added function column_count, used it internally in place of
            data_count, and improved documentation of associated
            functions.

            Thanks to James Cheney <james.cheney@gmail.com> for the patch!

2008-05-07: Renamed Data.to_string to Data.to_string_debug for converting
            fields to strings with their data constructor.  Replaced the
            previous function with one that behaves more like users
            would expect.  Thanks to Stefano Zacchiroli <zack@debian.org>
            for the suggestion.

2008-04-18: Improved backwards compatibility to older versions of SQLite.

2008-04-04: Fixed a build problem on Mac OS X.

2008-03-27: Fixed a build problem on FreeBSD.

            Thanks to Jaap Boender <Jaap.Boender@pps.jussieu.fr> for