@@ -1,3 +1,5 @@
+2009-08-22: enable_load_extension now raises an exception if unsupported.
+
 2009-07-28: Added better support for compiling with MSVC and ocamlbuild.
 
             Thanks to <ygrek@autistici.org> for this patch!
